--- a/package.json
+++ b/package.json
@@ -11,6 +11,16 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
+    "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-progress": "^1.1.0",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "firebase": "^10.5.2",
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.292.0",
@@ -19,11 +29,16 @@
     "react-hook-form": "^7.48.2",
     "react-router-dom": "^6.18.0",
     "react-toastify": "^9.1.3",
+    "shadcn-ui": "^0.8.0",
     "swiper": "^11.0.3",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
+    "vaul": "^0.9.1",
     "yup": "^1.3.2"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.2.0",
+    "@types/node": "^22.5.1",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
